[tool.poetry]
name = "sharepoint-loader"
version = "0.1.0"
description = "AquaChile's AI RAG Agent"
authors = ["Alvaro Gutierrez <alvarogutierrezmoraga@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langgraph = "^0.2.50"
langchain = "^0.3.7"
langchain-openai = "^0.2.8"
streamlit = "^1.40.1"
langchain-community = "^0.3.7"
azure-identity = "^1.19.0"
azure-search-documents = "^11.5.2"
langgraph-cli = {version = "0.1.55", extras = ["inmem"]}


[tool.poetry.group.dev.dependencies]
langchain-postgres = "^0.0.12"
psycopg = {extras = ["binary"], version = "^3.2.3"}
psycopg-pool = "^3.2.4"
langgraph-checkpoint-postgres = "^2.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
